2001-05-04  Dave Peticolas  <dave@krondo.com>

	* src/scm/main.scm: run the book-opened hook before showing
	the new-user window.

	* src/guile/Makefile.am: remove references to gnc-autogen.h.
	Clean gnc.c and gnc.h.

2001-05-03  Dave Peticolas  <dave@krondo.com>

	* src/engine/date.c (timespec_normalize): fix bug

	* doc/sgml/C/xacc-about.sgml: update credits

	* src/gnc-ui-util.h (_GNCPrintAmountInfo): make commodity const

	* src/gnome/window-register.c: fix compiler warning

2001-05-04  Robert Graham Merkel  <rgmerk@mira.net>

	* src/scm/report/transaction-report.scm : Add labels
	to subtotals.

2001-05-04  Conrad Canterford <conrad@mail.watersprite.com.au>

	* make-gnucash-patch.in: add --manifest option (allow use of a
	manifest file. Also, change --file option to allow multiple files.
	Fix bug in previous change.

	* README.patches: Updated to reflect new capabilities.

2001-05-03  Dave Peticolas  <dave@krondo.com>

	* doc/sgml/*/xacc-hierarchical-report.sgml: remove file

	* doc/sgml/pt_PT/xacc-txf-categories.sgml: add missing </article>

	* doc/sgml/pt_PT/gnucash.sgml: add missing file

	* doc/sgml/es/xacc-txf-categories.sgml: add missing </article>

	* doc/sgml/es/gnucash.sgml: add missing file

	* doc/sgml/C/xacc-txf-categories.sgml: add missing </article>

	* src/engine/DateUtils.c: config.h goes first

	* make-gnucash-patch.in: fix bug

	* README.cvs: update info

2001-05-03  Christian Stimming  <stimming@tuhh.de>

	* src/scm/report/account-summary.scm: fix bug.

	* src/scm/html-document.scm: added handler for scatter plots.

	* src/scm/report/price-scatter.scm: Added file. This eventually
	should show prices over time. ATM it demonstrates scatter plots in
	a meaningless report.

	* src/scm/html-scatter.scm: Added file. Provides scatter plots for
	reports.

	* src/scm/options.scm (gnc:color->hex-string): added function.

2001-05-03  Robert Graham Merkel <rgmerk@mira.net>

	* src/scm/report/transaction-report.scm: fix bug with secondary
	subheadings.
